[angel] changes deleted function
