# routes/categoryRouter.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 const categoryController = require('./../controllers/categoryController');
 
 router.post('/new', categoryController.createCategory);
-router.get('/show', categoryController.showAllCategory);
+router.get('/', categoryController.showAllCategory);
 router.get('/show/:id', categoryController.show_category_id);
 router.put('/updated/:id', categoryController.updateCategory);
 router.delete('/delete/:id', categoryController.deleteCategory);
