# routes/todoRouter.js
@@ -2,9 +2,9 @@ const router = require('express').Router();
 const todoController = require('./../controllers/todoController');
 
 router.post('/new', todoController.createTodo);
-router.get('/show', todoController.showTodo);
+router.get('/', todoController.showTodo);
 router.get('/show/:id', todoController.show_by_id);
-router.delete('/delete', todoController.deleteTodo);
+router.delete('/delete/:id', todoController.deleteTodo);
 router.put('/update/:id', todoController.updateTodo);
 
 module.exports = router;
